# CMakeExamples

./: README.md
Ex_add_sub_proj/: CMakeLists.txt
Ex_add_sub_proj/main/: CMakeLists.txt  main.cpp
Ex_add_sub_proj/sub_project1/: CMakeLists.txt
Ex_add_sub_proj/sub_project1/include/: sub_c.h
Ex_add_sub_proj/sub_project1/src/: sub_c.c
Ex_add_sub_proj/sub_project2/: CMakeLists.txt
Ex_add_sub_proj/sub_project2/include/: sub_cpp.hpp
Ex_add_sub_proj/sub_project2/src/: sub_cpp.cpp
Ex_separete_lib/: README.md
Ex_separete_lib/project/: CMakeLists.txt
Ex_separete_lib/project/include/: ver.h.in
Ex_separete_lib/project/lib_include/: sLibrary.hpp
Ex_separete_lib/project/src/: main.cpp
Ex_separete_lib/shared_lib/: CMakeLists.txt
Ex_separete_lib/shared_lib/include/: sLibrary.hpp
Ex_separete_lib/shared_lib/src/: sLibrary.cpp
Ex_separete_lib/static_lib/: CMakeLists.txt
Ex_separete_lib/static_lib/include/: sLibrary.hpp
Ex_separete_lib/static_lib/src/: sLibrary.cpp
Example_1/: CMakeLists.txt  main.cpp  test.c
Example_2/: CMakeLists.txt  README.md
Example_2/include/: stest.hpp
Example_2/src/: main.cpp  stest.cpp
Example_shared_lib/: CMakeLists.txt  README.md
Example_shared_lib/include/: path.h.in
Example_shared_lib/lib_src/: sLibrary.hpp
Example_shared_lib/src/: .main.cpp.swo  main.cpp
Example_static_lib/: CMakeLists.txt  README.md
Example_static_lib/include/: path.in.h
